--- a/HOMEWORK_7-2/index.html
+++ b/HOMEWORK_7-2/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <script src="book.js" defer></script>
-    <script src="student.js" defer></script>
+    <script src="book.js"></script>
+    <script src="student.js"></script>
 </body>
 
 </html>
