Homework 8-3.  Исправления по замечаниям

--- a/HOMEWORK_8-3/index.html
+++ b/HOMEWORK_8-3/index.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ECMAScript Homework 2
     </title>
+
+    <script src="employee.js" defer></script>
+    <script src="product.js" defer></script>
 </head>
 
 <body>
-    <script src="employee.js"></script>
-    <script src="product.js"></script>
+
 </body>
 
 </html>
