--- a/HOMEWORK_9-4/index.html
+++ b/HOMEWORK_9-4/index.html
@@ -7,7 +7,8 @@
     <title>ECMAScript Homework 4
     </title>
 
-    <script src="index.js" defer></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="task_1.js" defer></script>
 </head>
 
 <body>
