--- a/HOMEWORK_9-4/index.html
+++ b/HOMEWORK_9-4/index.html
@@ -9,6 +9,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="task_1.js" defer></script>
+    <script src="task_2.js" defer></script>
 </head>
 
 <body>
